Fixes #73 and aligns the header on small screens

--- a/css/style.css
+++ b/css/style.css
@@ -12645,6 +12645,14 @@ div.sf-accordion-toggle.sf-style-white a.sf-expanded {
   display: inline-block;
 }
 
+@media (max-width: 767.98px) {
+  .logo {
+    text-align: center;
+  }
+  #block-headercontact .text-end {
+    text-align: center !important;
+  }
+}
 /* Front Content */
 #zone-content:not(.front) {
   padding: 10px 1em 50px 1em;
